syntax = "proto3";

package post.v1;

option go_package = "postv1";
option java_multiple_files = true;
option java_package = "com.echo.v1";


import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

enum PostStatus {
  POST_STATUS_UNSPECIFIED = 0;
  POST_STATUS_PUBLISHED = 1;
}

message Post {
  int64 id = 1;
  string title = 2;
  string content = 3;
  PostStatus status = 4;
  google.protobuf.Timestamp create_time = 5;
  google.protobuf.Timestamp update_time = 6;
  google.protobuf.Timestamp delete_time = 7;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostResponse {
  Post post = 1;
}


message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {

}

message GetPostErrorRequest {

}

message GetPostErrorResponse {

}

service PostService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {
    option (google.api.http) = {
      get: "/api/v1/post/{id}"
    };
  }

  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/api/v1/post",
      body: "*"
    };
  }

  rpc GetPostError(GetPostErrorRequest) returns (GetPostErrorResponse) {
    option (google.api.http) = {
      get: "/api/v1/post-error",
    };
  }
}
